# burdakovd

./: ProjectHome.md
c++/sdl/: CMakeLists.txt  build-readme.txt  decode.sh
c++/sdl/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters  main.cpp
c++/sdl/RayTracing/: CMakeLists.txt  Camera.cpp  Camera.h  CompoundObject.cpp  CompoundObject.h  Cube.h  Equation.h  Frustum.cpp  Frustum.h  ICamera.h  IEngine.h  IRTObject.h  ITracer.h  IntersectionResult.h  Light.h  Material.cpp  Material.h  NormalizedVector3D.cpp  NormalizedVector3D.h  Object3D.h  Plane.h  Polynom.h  RTObject.h  Ray.cpp  Ray.h  RayTracing.vcproj  RayTracing.vcxproj  RayTracing.vcxproj.filters  Scene.cpp  Scene.h  Shared.h  SierpinskiPyramide.cpp  Sphere.cpp  Sphere.h  SquareEquation.h  Tetragon.cpp  Tetragon.h  Texture.h  TraceVector.h  Triangle.cpp  (+1 more)
c++/sdl/RayTracingDemo/: CMakeLists.txt  Demo.cpp  Demo.h  Makefile  RayTracingDemo.vcproj  RayTracingDemo.vcxproj  RayTracingDemo.vcxproj.filters  main.cpp
c++/sdl/UI/: Button.cpp  Button.h  CMakeLists.txt  Clickable.cpp  Clickable.h  ColorSelector.h  Element.cpp  Element.h  ElementSet.cpp  ElementSet.h  Label.cpp  Label.h  MouseOverable.cpp  UI.vcproj  UI.vcxproj.filters
c++/sdl/life/: Makefile  life.cpp  life.h  life.vcproj  main.cpp
c++/sdl/primitives/: CMakeLists.txt  Makefile  MyScene.cpp  MyScene.h  main.cpp  primitives.cpp  primitives.h  primitives.vcproj  primitives.vcxproj.filters
c++/sdl/radar/: main.cpp  radar.cpp  radar.h  radar.vcproj  radar.vcxproj.filters
c++/sdl/sdlapplication/: Affine.cpp  Affine.h  CMakeLists.txt  Circle2D.cpp  Circle2D.h  Color.h  CompoundObject.cpp  CompoundObject.h  Cube.cpp  Cube.h  DemoScene.cpp  DemoScene.h  FillPolygon.h  Frustum.cpp  Frustum.h  Geometry2D.cpp  Geometry2D.h  GraphObject.h  IGameLoop.h  ISimpleGameLoop.h  Matrix.cpp  Matrix.h  Pencil.cpp  Pencil.h  Polygon.cpp  Polygon.h  Prism.h  Projection.cpp  Projection.h  SDLApplication.cpp  SDLApplication.h  SDLException.cpp  SDLException.h  Scene.cpp  Scene.h  Segment.cpp  Segment.h  Shared.h  Sprite.cpp  Sprite.h  (+24 more)
c++/sdl/worms/: Battle.cpp  Battle.h  BattleField.h  CMakeLists.txt  CellType.h  Config.cpp  Config.h  Counter.cpp  Factory.h  IMyBody.h  IMyWorm.h  IRenderer.h  ISomeBody.h  ISomeWorm.h  IWorm.h  IWormFactory.h  MainMenu.cpp  MainMenu.h  Manual.cpp  Manual.h  MenuItem.cpp  MenuItem.h  MouseFollowers.h  RandomEater.h  ReadMe.txt  Registrator.cpp  Registrator.h  SettingsDialog.cpp  SettingsDialog.h  SimplePoint.h  Statue.h  Worm.cpp  Worm.h  WormLogic.h  WormsApplication.cpp  WormsApplication.h  main.cpp  worms.vcproj  worms.vcxproj.filters
trunk/c++/sdl/worms/: Battle.cpp  Battle.h  BattleField.h  BattleSettings.h  CMakeLists.txt  Config.cpp  Config.h  Counter.cpp  Counter.h  CountingWorm.cpp  CountingWorm.h  Engine.cpp  Engine.h  Factory.h  IBody.h  IMyWorm.h  ISomeWorm.h  IWorm.h  (+25 more)
(+2720 files in other folders)
